Fix Footer Alignment

--- a/index.css
+++ b/index.css
@@ -206,12 +206,14 @@ content a {
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
+    width: 50%;
 
 }
 .footer-flex-container-right {
     display: flex;
     justify-content: flex-end;
     flex-wrap: wrap;
+    width: 50%;
 }
 
 footer {
